// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Link > renders a link 1`] = `
<div>
  <a
    class="antialiased font-inter text-sm text-pca-grey-900 dark:text-white font-semibold inline-block rounded-sm underline underline-offset-[3px] transition-colors focus:outline-hidden focus-visible:ring-4 focus-visible:ring-pca-blue-300 decoration-inherit"
    href="https://pencilcase.app"
    target="_blank"
  >
    Go to pencil case
  </a>
</div>
`;

exports[`Link > renders a link with custom styling 1`] = `
<div>
  <a
    class="antialiased font-inter text-sm text-pca-red-500 dark:text-white font-semibold inline-block rounded-sm underline underline-offset-[3px] transition-colors focus:outline-hidden focus-visible:ring-4 focus-visible:ring-pca-blue-300 decoration-inherit"
    href="https://pencilcase.app"
  >
    Go to pencil case
  </a>
</div>
`;

exports[`Link > renders a react router link 1`] = `
<div>
  <a
    class="antialiased font-inter text-sm text-pca-grey-900 dark:text-white font-semibold inline-block rounded-sm underline underline-offset-[3px] transition-colors focus:outline-hidden focus-visible:ring-4 focus-visible:ring-pca-blue-300 decoration-inherit"
    data-discover="true"
    href="/some-path"
  >
    Go to pencil case
  </a>
</div>
`;
